webpack配置[静态目录]

--- a/src/index.html
+++ b/src/index.html
@@ -133,8 +133,8 @@
 
 <div class="showBox" style="margin-top: 20px; border: 1px solid #f0ad4e"></div>
 
-<script src="jquery-2.2.1.js"></script>
-<script src="xss.js"></script>
+<script src="../static/jquery.js"></script>
+<script src="../static/xss.js"></script>
 <script>
     var setStyles = function (e) {
         var target = e.target;
