webpack配置[自动添加厂商前缀]

--- a/src/index.html
+++ b/src/index.html
@@ -3,297 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>CEditor</title>
-    <style>
-        *{
-            margin: 0;
-            padding: 0;
-        }
-        ul,li{
-            list-style: none;
-        }
-        .c-container{
-            width: 600px;
-        }
-        .c-menu{
-            width: 100%;
-            border: 1px solid #666;
-            min-height: 40px;
-            box-sizing: border-box;
-        }
-        .c-menu .menu-item {
-            cursor: pointer;
-            display: inline-block;
-            margin: 0 3px;
-        }
-        .c-menu .menu-item:hover {
-
-        }
-        .c-editor{
-            width: 100%;
-            nin-height: 400px;
-            border: 1px solid #666;
-            padding: 10px;
-            box-sizing: border-box;
-        }
-
-
-        #handleWrap{position: absolute;display: none;}
-        #handleWrap ul{width: 100%;height: 100%;position: relative;border: 2px solid #03A9F4;}
-        #handleWrap ul li{width: 20px;height: 20px;position: absolute;border: 1px solid #03A9F4;background: #03A9F4;border-radius: 60%;bottom: 0;right: 0;margin: 0 -10px -10px 0px;cursor: move;}
-        /*#handleWrap ul li:first-child{top: 0;left: 0;margin: -10px 0 0 -10px;cursor: nw-resize;}*/
-        /*#handleWrap ul li:nth-child(2){top: 0;right: 0;margin: -10px -10px 0 0;cursor: ne-resize;}*/
-        /*#handleWrap ul li:nth-child(3){bottom: 0;left: 0;margin: 0 0 -10px -10px;cursor: sw-resize;}*/
-        /*#handleWrap ul li:nth-child(4){bottom: 0;right: 0;margin: 0 -10px -10px 0;cursor: se-resize;}*/
-
-    </style>
 </head>
 <body>
-<div class="c-container">
-    <div class="c-menu" id="c-menu">
-        <ul>
-            <!--文本格式-->
-            <li class="menu-item"><button data-name="bold" class="factory">粗体</button></li>
-            <li class="menu-item"><button data-name="italic" class="factory">斜体</button></li>
-            <li class="menu-item"><button data-name="underline" class="factory">下划线</button></li>
-            <li class="menu-item">|</li>
-            <li class="menu-item">颜色:<input type="color" class="foreColor"></li>
-            <li class="menu-item">背景:<input type="color" class="backColor"></li>
-            <li class="menu-item"><select name="" class="fontSize">
-                <option value="null">字体大小</option>
-                <option value="1">1</option>
-                <option value="2">2</option>
-                <option value="3">3</option>
-                <option value="4">4</option>
-                <option value="5">5</option>
-                <option value="6">6</option>
-                <option value="7">7</option>
-            </select></li>
-            <li class="menu-item"><select class="fontName">
-                <option value="null">字体</option>
-                <option value="serif">serif</option>
-                <option value="sans-serif">sans-serif</option>
-                <option value="cursive">cursive</option>
-                <option value="fantasy">fantasy</option>
-                <option value="monospace">monospace</option>
-            </select></li>
-            <!--对落-->
-            <li class="menu-item"><button data-name="justifyCenter" class="factory">居中</button></li>
-            <li class="menu-item"><button data-name="justifyLeft" class="factory">左对齐</button></li>
-            <li class="menu-item"><button data-name="justifyRight" class="factory">右对齐</button></li>
-            <li class="menu-item"><button data-name="indent" class="factory">添加缩进</button></li>
-            <li class="menu-item"><button data-name="outdent" class="factory">去掉缩进</button></li>
-            <li class="menu-item"><select class="heading">
-                <option value="null">标题(测试不成功)</option>
-                <option value="H1">H1</option>
-                <option value="H2">H2</option>
-                <option value="H3">H3</option>
-                <option value="H4">H4</option>
-                <option value="H5">H5</option>
-                <option value="H6">H6</option>
-            </select></li>
-            <!-- 编辑 -->
-            <li class="menu-item"><button data-name="copy" class="factory">复制</button></li>
-            <li class="menu-item"><button data-name="cut" class="factory">剪切</button></li>
-            <li class="menu-item"><button data-name="paste" class="factory">粘贴(经测试无效)</button></li>
-            <li class="menu-item"><button data-name="selectAll" class="factory">全选</button></li>
-            <li class="menu-item"><button data-name="delete" class="factory">删除</button></li>
-            <li class="menu-item"><button data-name="forwarddelete" class="factory">删除光标后字符</button></li>
-            <li class="menu-item"><button data-name="removeFormat" class="factory">清空格式</button></li>
-            <li class="menu-item"><button data-name="redo" class="factory">前进一步</button></li>
-            <li class="menu-item"><button data-name="undo" class="factory">后退一步</button></li>
-            <li class="menu-item"><button data-name="print" class="factory">打印(对firefox无效)</button></li>
-
-            <!-- 插入 -->
-            <li class="menu-item"><button data-name="insertImage" data-value="http://g.search2.alicdn.com/img/i2/197420347778059048/TB2NPkzb.hnpuFjSZFEXXX0PFXa_!!0-saturn_solar.jpg_220x220.jpg" class="factory">插入图片</button></li>
-            <li class="menu-item"><button data-name="createLink" data-value="www.baidu.com" class="factory">链接</button></li>
-            <li class="menu-item"><button type="text" data-name="innerHtml" data-value="<a href='www.baidu.com' target='_target'>百度</a>" class="factory">innerHtml</button></li>
-        </ul>
-    </div>
-    <div class="c-editor" id="c-editor" contenteditable="true">
-        <p>4月13日消息，据台湾媒体报道，<span>32岁的孙燕姿(Sng Ee Tze)和后天将满34岁的荷兰籍印度尼西亚男友纳迪姆(Nadim Van Der Ros)交往5年，曾说过"有空就结婚"的她，果然趁着宣传期尾声，于3月31日在新加坡登记注册了！昨消息传开</span>，她未否认，仅说<img src="https://ss0.baidu.com/73t1bjeh1BF3odCf/it/u=1711177943,677070058&fm=85&s=3BBD6686E3906E754C2E276B0300E05A" width="100px" height="100px"/><a style="color: red;">【按住shift键可等比缩放】</a>，所属"美妙音乐"则表示她个性低调，婚礼只会邀请双方亲友，也不会透露细节，但据新加坡可靠消息指出，婚宴订在5月初。</p>
-
-        <div id="handleWrap">
-            <ul>
-                <!--<li class="handle"></li>-->
-                <!--<li class="handle"></li>-->
-                <!--<li class="handle"></li>-->
-                <li class="handle"></li>
-            </ul>
-        </div>
-    </div>
-    <div>
-        <button class="getHtml">获取html</button>
-        <button class="getText">获取text</button>
-
-
-        <br>
-        <button class="showBtn">展示</button>
-    </div>
+<div class="container">
+    123
+    <div id="editor"></div>
 </div>
-
-<div class="showBox" style="margin-top: 20px; border: 1px solid #f0ad4e"></div>
 
 <script src="../static/jquery.js"></script>
 <script src="../static/xss.js"></script>
-<script>
-    var setStyles = function (e) {
-        var target = e.target;
-        var name = target.dataset.name,
-            value = target.dataset.value || null;
-        // console.log($(this).data('name'))
-        console.log(name, value)
-        document.execCommand(name, false, value);
-    }
 
-
-    $('#c-menu .factory').bind('click', setStyles)
-
-
-    $('#c-menu .foreColor').bind('change', function (e) {
-        var t = e.target;
-        var value = t.value;
-        document.execCommand('foreColor', false, value);
-    })
-    $('#c-menu .backColor').bind('change', function (e) {
-        var t = e.target;
-        var value = t.value;
-        document.execCommand('backColor', false, value);
-
-    })
-    $('#c-menu .fontSize').bind('change', function (e) {
-        var t = e.target;
-        var value = t.value;
-        if(value.length != 'null') {
-            document.execCommand('fontSize', false, value);
-        }
-    })
-    $('#c-menu .fontName').bind('change', function (e) {
-        var t = e.target;
-        var value = t.value;
-        if(value.length != 'null') {
-            document.execCommand('fontName', false, value);
-        }
-    })
-    $('#c-menu .heading').bind('change', function (e) {
-        var t = e.target;
-        var value = this.value;
-        if(value.length != 'null') {
-            document.execCommand('heading', false, value);
-        }
-    })
-
-
-
-
-    // 获取html
-    $('.getHtml').bind('click', function () {
-        var html = filterXSS($('#c-editor').html())
-        console.log(html)
-    })
-    $('.getText').bind('click', function () {
-        var text = $('#c-editor').text()
-        console.log(text);
-    })
-
-
-    $('.showBtn').bind('click', function () {
-        var html = filterXSS($('#c-editor').html())
-        $('.showBox').html(html)
-    })
-
-
-
-
-
-
-
-
-
-    //
-    //
-    //
-    // 图片操作
-    var startX,
-        startY,
-        startWidth,
-        startHeight,
-        currentImg;
-
-    $('#c-editor img').bind('click', showHandle);
-
-
-    function showHandle(type){
-        var that = this,
-            width = that.clientWidth,
-            height = that.clientHeight,
-            top = that.offsetTop,
-            left = that.offsetLeft,
-            handleWrap = $("#handleWrap");
-        currentImg = that;
-        if(type !== 1){
-            startWidth = parseInt(width);
-            startHeight = parseInt(height);
-        };
-        handleWrap.css({
-            width: width,
-            height: height,
-            top: top,
-            left: left,
-            display: 'block'
-        })
-        bindHandleEvent();
-        $(document).bind("click",hideHandle);
-    };
-    function hideHandle(e){
-        var that = e.target;
-        if(that.nodeName !== "IMG"){
-            $("#handleWrap").css({
-                display: 'none'
-            });
-            document.removeEventListener("click", hideHandle);
-        };
-    };
-
-    function bindHandleEvent(){
-        var handle = document.querySelectorAll("#handleWrap li");
-        for (var i = 0; i < handle.length; i++) {
-            handle[i].addEventListener("mousedown",function(e){
-                startX = e.clientX;
-                startY = e.clientY;
-                document.addEventListener("mousemove",setImgSize);
-            });
-        };
-        document.addEventListener("mouseup",function(){
-            document.removeEventListener("mousemove",setImgSize);
-            if(currentImg){
-                startWidth = parseInt(currentImg.clientWidth);
-                startHeight = parseInt(currentImg.clientHeight);
-            };
-        });
-    };
-    function setImgSize(e){
-        var currentX = e.clientX,
-            currentY = e.clientY,
-            shift = e.shiftKey,
-            moveX = currentX - startX,
-            moveY = currentY - startY;
-        if(shift){
-            changeImgSize(moveX);
-        }else{
-            changeImgSize(moveX,moveY);
-        };
-
-    };
-    function changeImgSize(width,height){
-        var height = height?height:width;
-        currentImg.style.width = startWidth + width+"px";
-        currentImg.style.height = startHeight + height+"px";
-        showHandle.call(currentImg,1);
-    };
-    //
-    //
-    //
-
-</script>
 </body>
 </html>
